--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Light Theme */
+body.light {
+  background-color: #ffffff;
+  color: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body.light .navbar-dark {
+  background-color: #f8f9fa; /* Light background for navbar */
+}
+
+body.light .btn-outline-light {
+  border-color: #000000;
+  color: #000000;
+}
+
+/* Dark Theme */
+body.dark {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+body.dark .navbar-dark {
+  background-color: #343a40; /* Dark background for navbar */
+}
+
+body.dark .btn-outline-light {
+  border-color: #ffffff;
+  color: #ffffff;
 }
